--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -1,6 +1,129 @@
-<h1>Editing Teacher</h1>
+<!--Adapted for use by Kevin M. -->
+<div class="page-header cap17-header vertical-align">
+	<div class="col-xs-11">
+		<h2>Teacher profile for <%= @teacher.screen_name %></h2>
+	</div>
+	<div class="col-xs-1 ">
+		<div class="header-sq i-ltblue" >
+			<span class="fa fa-home fa-3x teacher-icon "></span>
+		</div>
+	</div>
+</div>
 
-<%= render 'form', teacher: @teacher %>
+<!-- Teacher profile area -->
+<%= form_for(@teacher) do |f| %>
+  <% if @teacher.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
 
-<%= link_to 'Show', @teacher %> |
-<%= link_to 'Back', teachers_path %>
+      <ul>
+      <% @teacher.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+	<div class="row form-row">
+		<!-- Teacher ID -->
+		<div class="col-sm-2 col-sm-offset-1"><h4> Teacher ID: </h4></div>
+		<div class="col-sm-2">
+			<%= f.text_field :user_name, class: 'form-control', id: 'teacherID' %>
+		</div>
+	</div>
+	
+	<!-- Teacher name field -->
+	<div class="row form-row">
+	<div class="col-xs-1 col-xs-offset-1"><h4>Name: </h4></div>
+	<div class="col-xs-4 col-xs-offset-1">
+			<%= f.text_field :full_name, class: 'form-control', id: 'teacherName' %>
+		</div>
+	</div>   <!-- row -->
+	
+	<!-- Teacher Email -->
+	<div class="row form-row">
+		<div class="col-sm-offset-1 col-sm-2"><h4>Email: </h4></div>
+	
+		<div class="col-sm-4 col-sm-offset-0">
+			<%= f.email_field :email, class: 'form-control', id: 'email' %>
+		</div>
+	</div>
+	
+	<!--Teacher Admin -->
+	<div class="row form-row vertical-align">
+		<div class="col-sm-offset-1 col-sm-2"><h4>Access: </h4></div>
+	    <div class="col-sm-4 col-sm-offset-0">
+  			<%= f.select :powers, options_for_select([
+  			"SessionOnly", 
+  			"Teacher", 
+  			"Admin"]), 
+  			class: 'form-control' %>
+  		</div>
+	</div>
+	
+	<!-- a little extra space after name/email -->
+	<div class="form-spacer">	&nbsp;</div>
+	
+	<div class="row form-row vertical-align">
+		<div class="col-sm-offset-1 col-sm-2"><h4>Color: </h4></div>
+	
+		<div class="col-sm-4 col-sm-offset-0">
+			<%= f.select :color, options_for_select(['gray', 'navy','red','yellow',
+          'ltblue','ltorange','green','lavendar','plum','mint','pink',
+          'dkorange','aqua']), 
+			class: 'form-control' %>
+		</div>
+	</div>
+	
+	<!-- teacher icon field -->
+	<div class="row form-row">
+		<div class="col-xs-1 col-xs-offset-1"><h4>Icon: </h4></div>
+		<div class="col-xs-4 col-xs-offset-1">
+			<%= f.select :icon, options_for_select(['bug', 'car', 'puzzle-piece', 'flash',
+          'flask', 'futbol-o', 'gamepad', 'heart', 'leaf', 'paper-plane', 'paw',
+          'star', 'graduation-cap']), 
+			class: 'form-control' %>
+		</div>
+	</div>
+	
+	<div class="row form-row">
+		<div class="col-sm-offset-1 col-sm-2"><h4>Description: </h4></div>
+	
+		<div class="col-sm-6 col-sm-offset-0">
+			<%= f.text_field :description, class: 'form-control', id: 'Description' %>
+		</div>
+	</div>  
+	
+	<div class="row form-row">
+		<div class="col-sm-1 col-sm-offset-1"><br></div>
+	</div>
+	
+	<div class="row action-buttons-row">
+		<div class="col-sm-1 col-sm-offset-1"> 
+			<%= f.submit "Save Changes", class: "btn btn-success" %>
+		</div>
+<% end %>
+		<div class="col-sm-1 col-sm-offset-1"> 
+			<%= button_to "Cancel", teachers_path, :class => "btn btn-danger", :method => :get %>
+		</div>
+	</div>
+
+	<!--Action Icons -->
+<div class="row action-icon-row" style="margin-top: 40px;">
+	<div class="col-xs-2 col-xs-offset-1 text-center" title="Student Roster">
+		<div class ="action-sq i-red center-block">
+			<a href="teacher4.html"><span class="fa fa-child fa-4x student-icon"></span></a>
+		</div>
+		<p><a href="teacher4.html"><span class="student-icon-text">Student Roster</span></a></p>
+	</div>
+	<div class="col-xs-2 col-xs-offset-1 text-center" title="Change Password">
+		<div class ="action-sq i-navy center-block">
+			<a href="teacher5.html"><span class="fa fa-key fa-4x student-icon"></span></a>
+		</div>
+		<p><a href="teacher5.html"><span class="student-icon-text">Change Password</span></a></p>
+	</div>
+	
+	<p>Note from Kevin M: Still working out how to turn these into links while preserving the icons. 
+	Use teachers/id or teachers/id/pword to reach these pages, respectively.</p>
+	
+</div>
