--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,47 +1,51 @@
-<p id="notice"><%= notice %></p>
+<!--Adapted for use by Kevin M. -->
+<!-- page header -->
+<div class="page-header vertical-align">
+	<div class="col-xs-11">
+		<h2>All Teachers<small> - manage teachers at TPTE</small></h2><!-- Dynamically fills in with school id -->
+	</div>
+	<div class="col-xs-1 center-block">
+		<div class="header-sq i-plum" title="Bianca17">
+			<span class="fa fa-apple fa-3x teacher-icon"></span>
+		</div>
+	</div>
+</div><!--End page header-->
 
-<h1>Teachers</h1>
+	<!--New Teacher Button-->
+<div class="row first-content-row">
+	<div class="col-xs-3">
+		<p><%= notice %></p>
+		<%= button_to "New Teacher", new_teacher_path,
+    :class => "col-sm-offset-1 btn btn-lg btn-success", :method => :get %>
+	</div><!--End col-->
+</div><!--End row -->
 
-<table>
-  <thead>
-    <tr>
-      <th>User name</th>
-      <th>Password digest</th>
-      <th>Last login</th>
-      <th>Full name</th>
-      <th>Screen name</th>
-      <th>Icon</th>
-      <th>Color</th>
-      <th>Email</th>
-      <th>Description</th>
-      <th>Powers</th>
-      <th>School</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @teachers.each do |teacher| %>
-      <tr>
-        <td><%= teacher.user_name %></td>
-        <td><%= teacher.password_digest %></td>
-        <td><%= teacher.last_login %></td>
-        <td><%= teacher.full_name %></td>
-        <td><%= teacher.screen_name %></td>
-        <td><%= teacher.icon %></td>
-        <td><%= teacher.color %></td>
-        <td><%= teacher.email %></td>
-        <td><%= teacher.description %></td>
-        <td><%= teacher.powers %></td>
-        <td><%= teacher.school_id %></td>
-        <td><%= link_to 'Show', teacher %></td>
-        <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
-        <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+ <!--Teacher display area -->
+<table class="table table-striped table-hover table-responsive teachers-table">
+	<thead>
+		<tr>
+			<th class="col-xs-1">Icon</th>
+			<th>ID</th>
+			<th>Name</th>
+			<th>Admin</th>
+			<th>Last Login</th>
+		</tr>
+	</thead>
+	<tbody>
+		<% @teachers.each do |teacher| %>
+		<tr data-link=<%= edit_teacher_path(teacher.id) %>>
+			<td>
+				<div class="table-sq i-plum" title="<%= teacher.user_name %>">
+					<span class="fa fa-apple fa-2x table-icon"></span>
+				</div>
+			</td>
+			<td><p class="listText"><%= teacher.user_name %></p></td>
+			<td><p class="listText"><span><%= teacher.screen_name %></span></p></td>
+			<td><p class="listText"><span><%= teacher.powers %></span></p></td>
+			<!--This will hold the teacher's last logged in date.-->
+			<td><p class="listText"><span></span></p>
+			</td>
+		</tr>
+		<% end %>
+	</tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Teacher', new_teacher_path %>
