--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,59 +1,59 @@
-<p id="notice"><%= notice %></p>
+<!--(will be) Adapted for use by Kevin M. -->
+<div class="page-header cap17-header vertical-align">
+	<div class="col-xs-11">
+		<h2>Student Roster<small> - students accessible to teacher <%= @teacher.full_name%></small></h2>
+	</div>
+	<div class="col-xs-1">
+		<div class="header-sq i-plum" title=<%= @teacher.screen_name%>>
+			<span class="fa fa-apple fa-3x teacher-icon "></span>
+		</div>
+	</div>
+</div>
 
-<p>
-  <strong>User name:</strong>
-  <%= @teacher.user_name %>
-</p>
-
-<p>
-  <strong>Password digest:</strong>
-  <%= @teacher.password_digest %>
-</p>
-
-<p>
-  <strong>Last login:</strong>
-  <%= @teacher.last_login %>
-</p>
-
-<p>
-  <strong>Full name:</strong>
-  <%= @teacher.full_name %>
-</p>
-
-<p>
-  <strong>Screen name:</strong>
-  <%= @teacher.screen_name %>
-</p>
-
-<p>
-  <strong>Icon:</strong>
-  <%= @teacher.icon %>
-</p>
-
-<p>
-  <strong>Color:</strong>
-  <%= @teacher.color %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @teacher.email %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @teacher.description %>
-</p>
-
-<p>
-  <strong>Powers:</strong>
-  <%= @teacher.powers %>
-</p>
-
-<p>
-  <strong>School:</strong>
-  <%= @teacher.school_id %>
-</p>
-
-<%= link_to 'Edit', edit_teacher_path(@teacher) %> |
-<%= link_to 'Back', teachers_path %>
+<!-- Roster Form -->
+<div class="row">
+	<div class="col-sm-10 col-sm-offset-1">
+		<form>
+			<!-- Student Access -->
+			<div class="radio">
+				<label><input type="radio" name="studAccess">Access all students at Turning Pointe</label>
+			</div>
+			<div class="radio">
+				<label><input type="radio" name="studAccess">Some students</label>
+			</div>
+			<!--Add/Remove Ctrls -->
+			<div class="row form-row vertical-align">
+				<div class="form-group col-sm-7">
+					<label for="addStud">Add student to roster</label>
+					<select class="form-control" id="addStud">
+						<option>Not Implemented</option>
+					</select>
+				</div>
+				<div class="col-sm-1">
+					<button id="addStudBtn" class="btn btn-success"><i class="fa fa-plus icon-white"></i></button>
+				</div>
+			</div><!-- End Row -->
+			<div class="row form-row">
+				<div class="form-group col-sm-7">
+					<label for="removeStud">Remove student from roster</label>
+					<select class="form-control" id="removeStud">
+						<option>Not Implemented</option>
+					</select>
+				</div>
+				<div class="col-sm-1">
+					<button id="removeStudBtn" class="btn btn-danger"><i class="fa fa-minus icon-white"></i></button>
+				</div>
+			</div> <!--End row-->
+			<button type="submit" class="btn btn-lg btn-primary">Change Roster</button>
+		</form>
+	</div>
+</div><!--End row-->
+<div class="row">
+	<div class="col-sm-10">
+		<h3>Current Roster:</h3>
+	</div>
+</div>
+<div id="student-roster" class="pre-scrollable container-fluid"> <!--Student display area -->
+	<div class="row students-row">
+	</div>   <!-- row -->
+</div> <!--End Student Roster -->
