Fixes asset compiling for the heroku deploy (makes background appear)

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -23,7 +23,7 @@ p, a
 *********************************************************/
 body 
 {
-    background: lightgray url(geometry.png) repeat ; 
+    background: lightgray image-url("geometry.png") repeat ; 
 }
 .content-col
 {
