--- a/app/views/login_session/new.html.erb
+++ b/app/views/login_session/new.html.erb
@@ -5,23 +5,29 @@
 
     	<h1 class="login-header-text">Dinner Out V0.1</h1>
 			<br>
-			<form action="home1.html" accept-charset="UTF-8" method="post">
+			
+			
+				<!--                Login Area                  -->
+				<!--   Author: Meagan Moore & Steven Royster    -->
+							
+							<%= form_for(:login_session, url: login_path) do |f| %>
 				
-				<div class="form-group">
-					<label for="session_username">Username</label>
-					<input class="form-control" type="text" name="session[username]" id="session_username" />
-				</div>
+				      <%= f.label :user_name %>
+				      <%= f.text_field :user_name, class: 'form-control'%>
 				
-				<div class="form-group">
-					<label for="session_password">Password</label>
-					<input class="form-control" type="password" name="session[password]" id="session_password" />
-				</div>
-				<br>
+				      <%= f.label :password %>
+				      <%= f.password_field :password, class: 'form-control' %>
 				
-				<div class="form-group">
-						<input type="submit" href="home1.html" name="commit" value="Log in" class="btn btn-primary  btn-lg center-block" />					
-				</div>
-			</form>
+				      <%= f.label :remember_me, class: "checkbox inline" do %>
+				        <%= f.check_box :remember_me %>
+				        <span>Remember me on this computer</span>
+				      <% end %>
+				
+				      <%= f.submit "Log in", class: "btn btn-primary" %>
+				    <% end %>
+				    
+
+				
 			<br>
 
 		</div>   <!-- end col --> 
