--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -79,9 +79,7 @@
 	<div class="row form-row">
 		<div class="col-xs-1 col-xs-offset-1"><h4>Icon: </h4></div>
 		<div class="col-xs-4 col-xs-offset-1">
-			<%= f.select :icon, options_for_select(['bug', 'car', 'puzzle-piece', 'flash',
-          'flask', 'futbol-o', 'gamepad', 'heart', 'leaf', 'paper-plane', 'paw',
-          'star', 'graduation-cap']), 
+			<%= f.select :icon, options_for_select(['apple', 'book', 'pencil', 'calculator']), 
 			class: 'form-control' %>
 		</div>
 	</div>
