Pear: Some Teacher screen fixes

--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -40,6 +40,14 @@
 		</div>
 	</div>   <!-- row -->
 	
+	<!-- Teacher screen_name field -->
+	<div class="row form-row">
+	<div class="col-xs-1 col-xs-offset-1"><h4>Short Name: </h4></div>
+		<div class="col-xs-4 col-xs-offset-1">
+			<%= f.text_field :screen_name, class: 'form-control'%><!--no ID yet-->
+		</div>
+	</div>   <!-- row -->
+	
 	<!-- Teacher Email -->
 	<div class="row form-row">
 		<div class="col-sm-offset-1 col-sm-2"><h4>Email: </h4></div>
