--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -52,10 +52,10 @@
 		</div>
 	</div>   <!-- row -->
 	
-  <!-- Teacher name field -->
+  <!-- Teacher screen_name field -->
 	<div class="row form-row">
-	<div class="col-xs-1 col-xs-offset-1"><h4>Short Name (?): </h4></div>
-	<div class="col-xs-4 col-xs-offset-1">
+	<div class="col-xs-1 col-xs-offset-1"><h4>Short Name: </h4></div>
+		<div class="col-xs-4 col-xs-offset-1">
 			<%= f.text_field :screen_name, class: 'form-control'%><!--no ID yet-->
 		</div>
 	</div>   <!-- row -->
