Pear: Fixes some teacher testing problems

--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -42,7 +42,7 @@
 			<td><p class="listText"><%= teacher.user_name %></p></td>
 			<td><p class="listText"><span><%= teacher.screen_name %></span></p></td>
 			<td><p class="listText"><span><%= teacher.powers %></span></p></td>
-			<!--This will hold the teacher's last logged in date.-->
+			<td><p class="listText"><span><%= teacher.last_login %></span></p></td>
 			<td><p class="listText"><span></span></p>
 			</td>
 		</tr>
