--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -36,13 +36,22 @@
 		<tr data-link=<%= edit_teacher_path(teacher.id) %>>
 			<td>
 				<div class="table-sq i-plum" title="<%= teacher.user_name %>">
-					<span class="fa fa-apple fa-2x table-icon"></span>
+					<div class="table-sq i-<%= teacher.color%>">
+								<i class="fa fa-<%= teacher.icon%> fa-2x table-icon"></i>
+					</div>
 				</div>
 			</td>
 			<td><p class="listText"><%= teacher.user_name %></p></td>
 			<td><p class="listText"><span><%= teacher.screen_name %></span></p></td>
 			<td><p class="listText"><span><%= teacher.powers %></span></p></td>
-			<td><p class="listText"><span><%= teacher.last_login %></span></p></td>
+			<!--Last Login. If the user has never logged in, list Never.-->
+			<td><p class="listText"><span> 
+				<% if teacher.last_login.nil? %>
+				Never
+				<% else %>
+				<%= teacher.last_login %>
+				<% end %>
+			</span></p></td>
 			<td><p class="listText"><span></span></p>
 			</td>
 		</tr>
