--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -1,5 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+@charset "UTF-8";
 /***********************************************************
 * General CSS Stylesheet Document 
 * Written by: Debra Jensen
@@ -7,15 +9,18 @@
 /*********************************************************
 *  TEXT STYLING
 *********************************************************/
+
 @import url('https://fonts.googleapis.com/css?family=Hind|Rubik');
 h1, h2, h3, h4, h5, h6
 {
-    font-family: "Rubik", sans-serif;
+	font-family: "Rubik", sans-serif;
 }
+
 p, a
 {
-    font-family:"Hind", sans-serif;
+	font-family:"Hind", sans-serif;
 }
+
 /*********************************************************
 *  BACKGROUND & CONTENT 
 * Creates a white div which holds all of the content on
@@ -23,18 +28,20 @@ p, a
 *********************************************************/
 body 
 {
-    background: lightgray image-url("geometry.png") repeat ; 
+	background: lightgray url(geometry.png) repeat ; 
 }
+
 .content-col
 {
-    background-color: rgba(255,255,255,0.8);
-    border-radius: 10px;
-    padding-bottom: 2%;
+	background-color: rgba(255,255,255,0.8);
+	border-radius: 10px;
+	padding-bottom: 2%;
 }
 .content-text {
-    font-size: 1.4em;
-    margin-left: 20px;
+	font-size: 1.4em;
+	margin-left: 20px;
 }
+
 /*********************************************************
 *  ALIGNMENT
 * Handy for aligning two columns or divs. Use on a row div
@@ -44,169 +51,188 @@ body
     display: flex;
     align-items: center;
 }
+
 .page-header .h1
 {
-    padding-left: 100px;
+	padding-left: 100px;
 }
 .cap17-header {
-    margin-bottom: 40px;
+	margin-bottom: 40px;
 }
+
 /*********************************************************
 *  NAVBAR STYLING
 *********************************************************/
 .navbar
 {
-    background: #2458B7;
+	background: #2458B7;
 }
 .navbar a
 {
-    color:white;
+	color:white;
 }
 .navbar .brand, .navbar .nav > li > a:hover
 {
-    color:white;
-    background-color:#97EDEC;
+	color:white;
+	background-color:#97EDEC;
 }
+
 /*********************************************************
 *  ICON STYLING
 *********************************************************/
 .square
 {
-    height: 8em;
-    width: 8em;
-    display: flex;
-    flex-flow:column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 25px;
+	height: 8em;
+	width: 8em;
+	display: flex;
+	flex-flow:column;
+	align-items: center;
+	justify-content: center;
+	border-radius: 25px;
 }
 .square:hover
 {
-    -webkit-filter: brightness(90%);
-    -moz-filter: brightness(90%);
-    -o-filter:brightness(90%);
+	-webkit-filter: brightness(90%);
+	-moz-filter: brightness(90%);
+	-o-filter:brightness(90%);
 }
+
 .square h1, .square h2,.square h3, .square h4, .square p
 {
-    color:#FFFFFF;
+	color:#FFFFFF;
 }
 .student-icon
 {
-    font-size: 5em;
-    color: #FFFFFF;
+	font-size: 5em;
+	color: #FFFFFF;
 }
 .teacher-icon
 {
-    font-size: 5em;
-    color: #FFFFFF;
+	font-size: 5em;
+	color: #FFFFFF;
 }
 .icon-white
 {
-    color: #FFFFFF;
+	color: #FFFFFF;
 }
 /* Used for teacher profile icon  and smaller student icons */
 .profile-sq
 {
-    height: 3.5em;
-    width: 3.5em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
+	height: 3.5em;
+	width: 3.5em;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 10px;
 }
+
 .b-square
 {
-    height: 8em;
-    width: 8em;
-    border-radius: 25px;
+	height: 8em;
+	width: 8em;
+	border-radius: 25px;
+
 }
+
 /*********************************************************
 *  PROF BILL is STYLIN'
 *  merge these into proper categories after the demo?
 *********************************************************/
+
 .header-sq
 {
-    height: 3.5em;
-    width: 3.5em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
+	height: 3.5em;
+	width: 3.5em;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 10px;
 }
+
 .header-icon {
-    color: white;
+	color: white;
 }
+
 /* Action squares appear at the bottom of the page and take user to another page */
 .action-sq {
-    height: 6em;
-    width: 6em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
+	height: 6em;
+	width: 6em;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 10px;
+
 transition: all .2s ease-in-out;
 }
 .action-sq:hover {
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -o-transform:scale(1.1);
-    transform:scale(1.1);
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-o-transform:scale(1.1);
+	transform:scale(1.1);
+
 }
 .action-icon {
-    font-size: 6em;
-    color: white;
+	font-size: 6em;
+	color: white;
 }
 .action-icon:hover {
+
 }
+
 .logout-art {
-    padding-top: 2%;
+	padding-top: 2%;
 }
 .logout-art-text {
-    font-size: 1.4em;
+	font-size: 1.4em;
 }
 .first-content-row {
-    padding-top: 20px;
+	padding-top: 20px;
 }
+
 /*********************************************************
 *  ACTION ROW SPACING
 *  Spacing and buttons
 *********************************************************/
+
 .action-icon-row {
-    padding-top: 40px;
+	padding-top: 40px;
 }
 .action-buttons-row {
-    padding-top: 40px;
+	padding-top: 40px;
 }
+
 /*********************************************************
 *  FORM SPACING
 *  Spacing 
 *********************************************************/
 .form-row {
-    padding-bottom: 5px;
+	padding-bottom: 5px;
 }
 .form-spacer-20 {
-    padding-top: 20px;
+	padding-top: 20px;
 }
 .table-sq
 {
-    height: 3em;
-    width: 3em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
+	height: 3em;
+	width: 3em;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 10px;
 }
+
 .table-icon
 {
-    font-size: 4em;
-    color: white;
+	font-size: 4em;
+	color: white;
 }
 .squares-row {
-    padding-bottom: 60px;
+	padding-bottom: 60px;
 }
 .add-rm-squares-row {
-    padding-bottom: 20px;
+	padding-bottom: 20px;
 }
+
 /*********************************************************
 *  TABLE STYLING
 *  Used for admin screens
@@ -218,14 +244,16 @@ transition: all .2s ease-in-out;
 .table-striped > tbody > tr:hover td{
   background-color: #FFEB65;
 }
+
 .schools-table {
-/*  width: 90%;
-    margin-left: 40px; */
-    margin-top: 40px;
+/*	width: 90%;
+	margin-left: 40px; */
+	margin-top: 40px;
 }
 .teachers-table {
-    margin-top: 40px;
+	margin-top: 40px;
 }
+
 /*********************************************************
 *  ICON COLORS
 * i-navy, i-ltblue, i-red, and i-yellow are also found in
@@ -233,54 +261,58 @@ transition: all .2s ease-in-out;
 *********************************************************/
 .i-gray
 {
-    background-color: #787676;
+	background-color: #787676;
 }
+
 .i-navy
 {
-    background-color:#2458B7;
+	background-color:#2458B7;
 }
+
 .i-red
 {
-    background-color: #EC514A;
+	background-color: #EC514A;
 }
 .i-yellow
 {
-    background-color: #FFEB65;
+	background-color: #FFEB65;
 }
+
 .i-ltblue
 {
-    background-color:#97EDEC;
+	background-color:#97EDEC;
 }
+
 .i-ltorange
 {
-    background-color:#F8BD28;
+	background-color:#F8BD28;
 }
 .i-green
 {
-    background-color:#8BC04F;
+	background-color:#8BC04F;
 }
 .i-lavendar
 {
-    background-color: #8E7BB9;
+	background-color: #8E7BB9;
 }
 .i-plum
 {
-    background-color: #B23F73;
+	background-color: #B23F73;
 }
 .i-mint
 {
-    background-color:#5BC2A8;
+	background-color:#5BC2A8;
 }
 .i-pink
 {
-    background-color:#E889B9;
+	background-color:#E889B9;
 }
 .i-dkorange
 {
-    background-color:#E77F24;
+	background-color:#E77F24;
 }
 .i-aqua
 {
-    background-color:#50C0E8;
+	background-color:#50C0E8;
 }.fa-3x {
 }
