Updated validates in teacher model and helpers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,8 @@
 		<ul class="nav navbar-nav ">
 			<li><a href="">Help</a></li>
 			<li><a href="">Admin</a></li>
-			<li><a href="">Profile</a></li>
+			<li><%= link_to 'Admin', admin_path %></li>
+			<li><%= link_to 'Profile', teachers_path %></li>
 			<li><%= link_to "Logout", logout_path %></li>
 		</ul>
 	</div>		<!-- end nav-collapse -->
