--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,9 +43,11 @@
 	<div id="navbar" class="collapse navbar-right navbar-collapse">
 		<ul class="nav navbar-nav ">
 			<li><a href="">Help</a></li>
-			<li><%= link_to 'Admin', admin_path %></li>
-			<li><%= link_to 'Profile', teachers_path %></li>
-			<li><%= link_to "Logout", logout_path %></li>
+			<% if logged_in? %>
+				<li><%= link_to 'Admin', admin_path %></li>
+				<li><%= link_to 'Profile', teachers_path %></li>
+				<li><%= link_to "Logout", logout_path %></li>
+			<% end %>
 		</ul>
 	</div>		<!-- end nav-collapse -->
 </div>		<!-- end navbar -->
