--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -1,3 +1,4 @@
+<!-- changed by Robert Herrera -->
 <%= form_for(school) do |f| %>
   <% if school.errors.any? %>
     <div id="error_explanation">
@@ -11,42 +12,76 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :full_name %>
-    <%= f.text_field :full_name %>
+<!--  School Icon Name -->  
+  <div class="row form-row">
+    <div class="col-xs-2 col-xs-offset-1"><h4> School ID: </h4></div>
+    <div class="col-xs-2">
+      <%= f.text_field :screen_name, class: "form-control" %>	
+    </div>
+  </div>
+	
+<!--  School Name -->  
+  <div class="row form-row">
+    <div class="col-xs-1 col-xs-offset-1"><h4>School Name: </h4></div>
+    <div class="col-xs-4 col-xs-offset-1">
+      <%= f.text_field :full_name, class: "form-control"  %>    				
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :screen_name %>
-    <%= f.text_field :screen_name %>
+  <div class="" form-spacer="">	&nbsp;</div>
+
+<!--  School Email -->  
+  <div class="row form-row">
+    <div class="col-xs-1 col-xs-offset-1"><h4>Email: </h4></div>
+    <div class="col-xs-4 col-xs-offset-1">
+      <%= f.text_field :email, class: "form-control"  %>    				
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :icon %>
-    <%= f.text_field :icon %>
+<!--  School Website -->  
+  <div class="row form-row">
+    <div class="col-xs-1 col-xs-offset-1"><h4>Website: </h4></div>
+    <div class="col-xs-4 col-xs-offset-1">
+      <%= f.text_field :website, class: "form-control"  %>    				
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :color %>
-    <%= f.text_field :color %>
-  </div>
+<!-- Show School Color Field -->
+  <div class="row form-row">
+		<div class="col-xs-1 col-xs-offset-1">
+		  <h4>Color: </h4></div>
+		<div class="col-xs-4 col-xs-offset-1">
+      <%= f.select :color, ['gray', 'navy','red','yellow',
+      ['ligh blue', 'ltblue'],['light orange','ltorange'],'green','lavendar','plum','mint','pink',
+      ['dark orange','dkorange'],'aqua']%>
+		</div>
+	</div>
+	
+<!-- Show School Description Field -->
+	<div class="row form-row">
+		<div class="col-xs-1 col-xs-offset-1"><h4>Description: </h4></div>
+		<div class="col-xs-6 col-xs-offset-1">
+		  <%= f.text_area :description, class: "form-control"  %>
+		</div>
+	</div>
 
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
 
-  <div class="field">
-    <%= f.label :website %>
-    <%= f.text_field :website %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
+  <!-- This area displays the save or cancel buttons
+ It uses an If statment to test a passed in value "isNew"
+ to determine which button text will show 
+ Matt O -->
+  <div class="row action-buttons-row">
+	  <div class="col-xs-6 col-xs-offset-1 text-center"> 
+      <% if local_assigns[:isNew] %>
+        <%= f.submit "Add New School", class: "btn btn-success"%>
+						&nbsp; &nbsp; &nbsp;
+	      <%= link_to 'Cancel', schools_path, class: "btn btn-danger" %>
+      <% else %>
+        <%= f.submit "Save Changes", class: "btn btn-success"%>
+						&nbsp; &nbsp; &nbsp;
+	      <%= link_to 'Cancel', schools_path, class: "btn btn-danger" %>        
+      <% end %>
+	    
+    </div>
   </div>
 <% end %>
