--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,39 +1,49 @@
+<!-- Modified by Robert Herrera -->
+<!-- Displays each schools profile schools/1 -->
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Full name:</strong>
-  <%= @school.full_name %>
-</p>
+<!-- page header -->
+<div class="page-header vertical-align">
+	<div class="col-xs-11">
+		<h2>School Profile<small> - view information for school <%= @school.school_icon_name %></small></h2><!-- Dynamically fills in with school id -->
+	</div>
+	<div class="col-xs-1 pull-right">
+		<div class="header-sq i-plum" >
+			<span class="fa fa-apple fa-3x teacher-icon"></span>
+		</div>
+	</div>
+</div>
+<!--End page header-->
+
+
 
 <p>
-  <strong>Screen name:</strong>
-  <%= @school.screen_name %>
-</p>
+  <strong>School ID:</strong>
+  <%= @school.school_icon_name %>
 
-<p>
-  <strong>Icon:</strong>
-  <%= @school.icon %>
-</p>
-
-<p>
-  <strong>Color:</strong>
-  <%= @school.color %>
+  <strong>Name:</strong>
+  <%= @school.school_name %>
 </p>
 
 <p>
   <strong>Email:</strong>
-  <%= @school.email %>
+  <%= @school.school_email %>
 </p>
 
 <p>
   <strong>Website:</strong>
-  <%= @school.website %>
+  <%= @school.school_website %>
+</p>
+<p>
+  <strong>Color:</strong>
+  <%= @school.color %>
+</p>
+<p>
+  <strong>School description:</strong>
+  <%= @school.school_description %>
 </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @school.description %>
-</p>
+
 
 <%= link_to 'Edit', edit_school_path(@school) %> |
 <%= link_to 'Back', schools_path %>
