--- a/app/views/login_session/new.html.erb
+++ b/app/views/login_session/new.html.erb
@@ -9,18 +9,22 @@
 			<!--                Login Area                  -->
 			<!--   Author: Meagan Moore & Steven Royster    -->
 			
+			<div class="form-group">
 			<%= form_for(:login_session, url: login_path) do |f| %>
-				<%= f.label :user_name %>
-				<%= f.text_field :user_name, class: 'form-control'%>
-				
+				<%= f.label :username %>
+				<%= f.text_field :username, class: 'form-control'%>
+			</div>
+			
+			<div class="form-group">
 				<%= f.label :password %>
 			  <%= f.password_field :password, class: 'form-control' %>
-				
-				<%= f.submit "Log in", class: "btn btn-primary" %>
-			<% end %>
-
+			</div>
 			<br>
-
+			
+			<%= f.submit "Log in", class: "btn btn-primary btn-lg center-block" %>
+			<% end %>
+			<br>
+			
 		</div>   <!-- end col --> 
 	</div>   <!-- end row -->
 </div>   <!-- end container -->
