Added ux_helper.rb with methods to return string arrays for student icons, teachers, and colors

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -283,7 +283,7 @@ transition: all .2s ease-in-out;
 	background-color:#97EDEC;
 }
 
-.i-ltorange
+.i-orange
 {
 	background-color:#F8BD28;
 }
@@ -314,5 +314,4 @@ transition: all .2s ease-in-out;
 .i-aqua
 {
 	background-color:#50C0E8;
-}.fa-3x {
 }
