Fixed school pages

--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -46,16 +46,16 @@
 					</div>
 				</td>
 				<td>
-				 	<%= school.school_icon_name %>
+				 	<%= school.screen_name %>
 				</td>
 				<td>
 					<p class="listText">
-					<%= school.school_name %>
+					<%= school.full_name %>
 					</p>
 				</td>
 				<td>
 					<p class="listText">
-					<%= school.school_description %>
+					<%= school.description %>
 					</p>
 				</td>
 	        </tr>
