--- a/app/views/schools/edit.html.erb
+++ b/app/views/schools/edit.html.erb
@@ -1,7 +1,7 @@
 <!-- page header -->
 <div class="page-header vertical-align">
 	<div class="col-xs-11">
-		<h2>School Profile<small> - Edit information for school <%= @school.school_icon_name %></small></h2><!-- Dynamically fills in with school id -->
+		<h2>School Profile<small> - Edit information for school <%= @school.screen_name %></small></h2><!-- Dynamically fills in with school id -->
 	</div>
 	<div class="col-xs-1 pull-right">
 		<div class="header-sq i-plum" >
