Added super, added back to login

--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -2,6 +2,7 @@
 		<div class="page-header vertical-align">
 			<div class="col-xs-11">
 				<h2>About<small> - information, authors and acknowledgements</small></h2><!-- Dynamically fills in with school id -->
+				<%= link_to "Back to login", login_path%>
 			</div>
 			<div class="col-xs-1 center-block">
 				<div class="header-sq i-gray" title="All about Dinner Out">
