--- a/app/views/login_session/logout.html.erb
+++ b/app/views/login_session/logout.html.erb
@@ -4,6 +4,7 @@
 		<div class="page-header vertical-align">
 			<div class="col-xs-11">
 				<h2>Logged Out<small> - thank you for using Dinner Out</small></h2><!-- Dynamically fills in with school id -->
+				<%= link_to "Back to login", login_path%>
 			</div>
 			<div class="col-xs-1 center-block">
 				
