--- a/app/views/login_session/new.html.erb
+++ b/app/views/login_session/new.html.erb
@@ -16,8 +16,8 @@
 				<%= f.label :user_name %>
 				<%= f.text_field :user_name, class: 'form-control'%>
 
-				<%= f.label :username %>
-				<%= f.text_field :username, class: 'form-control'%>
+				<!--<%= f.label :username %>-->
+				<!--<%= f.text_field :username, class: 'form-control'%>-->
 			</div>
 			
 			<div class="form-group">
