--- a/app/views/static_pages/about2.html.erb
+++ b/app/views/static_pages/about2.html.erb
@@ -2,6 +2,7 @@
 			
 			<div class="col-xs-11">
 				<h2>About student art<small> - artwork contributed to Dinner Out</small></h2><!-- Dynamically fills in with school id -->
+				<%= link_to "Back to login", login_path%>
 			</div>
 			<div class="col-xs-1 center-block">
 				<div class="header-sq i-lavendar" title="About out student art">
