--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,64 +1,46 @@
-<!-- Modified by Robert Herrera -->
-<p id="notice"><%= notice %></p>
-
-<!-- page header -->
-	<div class="page-header vertical-align">
-		<div class="col-xs-11">
-			<h2>All Schools<small> view/edit all Schools in Dinner Out</small></h2>
-		</div>
-		<div class="col-xs-1 center-block">
-			<div class="header-sq i-plum" title="Bianca17">
-				<span class="fa fa-apple fa-3x teacher-icon"></span>
-			</div>
-		</div>
-	</div><!--End page header-->
-   
-<!--New Teacher Button-->
-    <div class="row first-content-row">
-    	<div class="col-xs-3">
-			<form action='schools/new'>
-				<button type="submit" class="col-sm-offset-1 btn btn-lg btn-success">
-					<i class="fa fa-plus-square-o"></i>  
-					New School
-				</button>
-			</form>
-		</div><!--End col-->
-    </div><!--End row -->
-
-<!--Teacher display area -->
-   	<table class="table table-striped table-hover table-responsive teachers-table">
-   		<thead>
-   			<tr>
-				<th class="col-xs-1"></th>
-				<th>ID</th>
-				<th>School</th>
-				<th>Description</th>
-			</tr>
-		</thead>
-		<tbody>
-		  <% @schools.each do |school| %>
-		  <tr>
-		  	<tr data-link = "<%= edit_school_path(school) %>">
-				<td>
-					<div class="table-sq i-<%= school.color %>">
-						<span class="fa fa-home fa-3x"></span>  <!--Always the Bootstrap glyph school Icon-->
-						
+<!-- Edited by Dakota B -->
+			<!-- page header -->
+			<div class="page-header cap17-header">
+				<h2>All Schools <small> - view/edit all schools
+					<div class ="header-sq i-navy pull-right" title="All schools">
+						<span class="fa fa-home fa-2x header-icon"></span>
 					</div>
-				</td>
-				<td>
-				 	<%= school.screen_name %>
-				</td>
-				<td>
-					<p class="listText">
-					<%= school.full_name %>
-					</p>
-				</td>
-				<td>
-					<p class="listText">
-					<%= school.description %>
-					</p>
-				</td>
-	        </tr>
-	      <% end %>
-    	</tbody>
-    </thead>
+				</small>
+				</h2>
+			</div>   <!--page header-->
+
+			<!-- new school button -->
+			<div class="row">
+				<div class="col-xs-3 col-xs-offset-1">
+					<form  action="school3.html">
+						<button type="submit" class="col-sm-offset-1 btn btn-lg btn-success">
+							<i class="fa fa-plus-square-o"></i> New School
+						</button>
+					</form>
+				</div>   <!-- col -->
+    	</div>   <!-- row -->
+
+			<!-- all school table -->
+	    <table class="table table-striped table-hover table-responsive schools-table">
+	   		<thead>
+	   			<tr>
+						<th>ID</th>
+						<th>Name</th>
+						<th>Description</th>
+					</tr>
+				</thead>
+				
+				<!-- This section is responsible for listing all of the schools in the database into the schools index page -->
+						<tbody>
+							<%= will_paginate %>
+				            <% @schools.each do |school| %>
+						  					<tr data-link="/schools/<%= school.id %>">
+												<td><p class="listText">
+										    <p class="fa fa-home school-icon">&nbsp;&nbsp;&nbsp;<span> <%= school.icon %></span> </p></td>
+										    <td><p class="listText"><span> <%= school.screen_name %></span> </p></td>
+										    <td><p class="listText"><span> <%= school.description %></span> </p></td>
+				  		      		</tr>
+				  		      <% end %>
+							</tbody>
+						</table>
+		  		<%= will_paginate %>
