--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -12,7 +12,7 @@
 			<!-- new school button -->
 			<div class="row">
 				<div class="col-xs-3 col-xs-offset-1">
-					<form  action="school3.html">
+					<form  action="newSchool.html">
 						<button type="submit" class="col-sm-offset-1 btn btn-lg btn-success">
 							<i class="fa fa-plus-square-o"></i> New School
 						</button>
