--- a/app/views/teachers/home.html.erb
+++ b/app/views/teachers/home.html.erb
@@ -1,5 +1,13 @@
 <!-- @author: Matthew O & Alex P -->
 <!-- page header -->
+<script>
+$(document).ready(function() {
+$(".image-radio").click(function(){
+     $(this).attr('checked',true);
+     $("select[name='student_id']").val($(this).attr('id'));
+ });
+});
+</script>
 <div class="page-header vertical-align">
 	<div class="col-xs-11">
 		<h2>Home<small> - student roster for teacher <%= @teacher.screen_name %></small></h2><!-- Dynamically fills in with school id -->
@@ -17,11 +25,14 @@
 		<% if index == 0 || index == 4 %>
 			<div class="row students-row">
 		<% end %>
-		<div class="col-xs-3 text-center">
-      <div class =" square i-<%= student.color %> center-block">
+		<div class="image-radio col-xs-3 text-center" id="<%= student.id %>">
+			<input name="student_roster" id="student<%= student.id %>" value="student<%= student.id %>" style="display:none" type="radio"/>
+			<label for="student<%= student.id %>">
+      <div class ="square i-<%= student.color %> center-block">
           <span class="fa fa-<%= student.icon %> fa-5x student-icon "></span>
       </div>
-      <p><span class="student-icon-text"><%= student.full_name%></span></p>
+      <p><span class="student-icon-text" id="<%= student.id %>"><%= student.full_name%></span></p>
+      </label>
     </div>    <!-- col -->
     <% if index == 3 || index == 7 || index == (@top_students.size-1) %>
     	</div>   <!-- row -->
@@ -55,3 +66,4 @@
 		</div>
 	</form>
 </div>   <!-- row -->
+
