Reimplement password and password_confirmation in new teacher

--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -74,7 +74,15 @@
 		<div class="col-sm-offset-1 col-sm-2"><h4>Password: </h4></div>
 
 		<div class="col-sm-4 col-sm-offset-0">
-			<!--<input type="password" class="form-control" id="password"> Temporarily commented out.-->
+			<%= f.password_field :password, class: 'form-control'%>
+		</div>
+	</div>
+	
+	<div class="row form-row">
+		<div class="col-sm-offset-1 col-sm-2"><h4>Confirm Password: </h4></div>
+
+		<div class="col-sm-4 col-sm-offset-0">
+			<%= f.password_field :password_confirmation, class: 'form-control'%>
 		</div>
 	</div>
 	
