--- a/app/views/teachers/home.html.erb
+++ b/app/views/teachers/home.html.erb
@@ -1,12 +1,15 @@
 <!-- @author: Matthew O & Alex P -->
 <!-- page header -->
 <script>
-$(document).ready(function() {
-$(".image-radio").click(function(){
-     $(this).attr('checked',true);
-     $("select[name='student_id']").val($(this).attr('id'));
- });
-});
+	$(document).ready(function() {
+		$(".image-radio").click(function(){
+		     $(this).attr('checked',true);
+		     $("select[name='student_id']").val($(this).attr('id'));
+		 });
+		 $('#student_id').change(function(){ 
+		    $('input[name="student_roster"]').prop('checked', false);
+		});
+	});
 </script>
 <div class="page-header vertical-align">
 	<div class="col-xs-11">
@@ -28,12 +31,12 @@ $(".image-radio").click(function(){
 		<div class="image-radio col-xs-3 text-center" id="<%= student.id %>">
 			<input name="student_roster" id="student<%= student.id %>" value="student<%= student.id %>" style="display:none" type="radio"/>
 			<label for="student<%= student.id %>">
-      <div class ="square i-<%= student.color %> center-block">
-          <span class="fa fa-<%= student.icon %> fa-5x student-icon "></span>
-      </div>
-      <p><span class="student-icon-text" id="<%= student.id %>"><%= student.full_name%></span></p>
-      </label>
-    </div>    <!-- col -->
+		      <div class ="square i-<%= student.color %> center-block">
+		          <span class="fa fa-<%= student.icon %> fa-5x student-icon "></span>
+		      </div>
+		      <p><span class="student-icon-text" id="<%= student.id %>"><%= student.full_name%></span></p>
+      		</label>
+    	</div>    <!-- col -->
     <% if index == 3 || index == 7 || index == (@top_students.size-1) %>
     	</div>   <!-- row -->
     <% end %>
