--- a/app/views/squares/new.html.erb
+++ b/app/views/squares/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New Square</h1>
+<!--Ricky Perez & Michael Loptien-->
+		<!-- page header -->
+<div class="page-header vertical-align">
+	<div class="col-xs-11">
+	  <h2>New Square<small> - add a new behavior square to school [SCHOOL NAME HERE]</small></h2><!-- Dynamically fills in with school id -->
+	</div>
+	<div class="col-xs-1 center-block">
+		<div class="header-sq i-ltblue" title="Turning Pointe Autism Foundation">
+		  <span class="fa fa-home fa-3x teacher-icon"></span>
+		</div>
+  </div>
+</div><!--End page header-->
 
-<%= render 'form', square: @square %>
-
-<%= link_to 'Back', squares_path %>
+<%= render 'form', square: @square, isNew: true %>
