--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,6 +1,35 @@
-<h1>Editing Student</h1>
+<!--Ricky Perez & Michael Loptien-->
 
-<%= render 'form', student: @student %>
+	<!-- page header -->
+		<div class="page-header vertical-align">
+			<div class="col-xs-11">
+				<h2>Student Profile <small>- view/edit information for student <%= @student.full_name %></small></h2>
+			</div>
+			<div class="col-xs-1 center-block">
+				<div class="header-sq i-<%= @student.color %>" title="<%= @student.screen_name %>"> 															<!--this will be for teacher color-->
+					<span class="fa fa-<%= @student.icon %> fa-3x teacher-icon"></span> <!--this will be for teacher icon-->
+				</div>
+			</div>
+		</div>
+<!--End page header-->
 
-<%= link_to 'Show', @student %> |
-<%= link_to 'Back', students_path %>
+<%= render 'form', student: @student, isNew: false %> <!--Renders my form partial-->
+
+<!-- Page Footer -->
+	<div class="row action-icon-row" style="margin-top: 40px;">
+		<!-- Students Square Link -->
+		<div class="col-xs-2 col-xs-offset-1 text-center" title="View/edit squares for student">
+			<div class="action-sq i-ltblue center-block">
+				<a href="student4.html"><span class="fa fa-square-o fa-4x action-icon"></span></a> <!--needs to navigate to student square page-->
+			</div>
+				<p><a href="student4.html"><span class="student-icon-text">View Squares</span></a></p>
+		</div> <!-- col -->
+		
+		<!--Student Notes Link -->
+		<div class="col-xs-2 text-center" title="View/edit notes for student">
+			<div class="action-sq i-red center-block">
+				<a href="#"><span class="fa fa-sticky-note-o fa-4x action-icon"></span></a>		<!--No destination yet-->
+			</div>
+				<p><a href="#"><span class="student-icon-text">View Notes</span></a></p>
+		</div><!-- col -->
+	</div>
