--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,41 +1,58 @@
+<!--Ricky Perez & Michael Loptien-->
+
 <p id="notice"><%= notice %></p>
 
-<h1>Students</h1>
+<!-- Page Header -->
+<div class="page-header vertical-align">
+	<div class="col-xs-11">
+	  <h2>All Students<small> - manage students at school [SCHOOL NAME HERE]</small></h2><!-- Dynamically fills in with school id @school.screen_name -->
+	</div>
+	<div class="col-xs-1 center-block">
+		<div class="header-sq i-ltblue" title="Turning Pointe Autism Foundation"> <!--Need to add code for teachers icon-->
+					<span class="fa fa-home fa-3x teacher-icon"></span>
+		</div>
+	</div>
+</div><!--End page header-->
+<br>
 
-<table>
+<!-- New Student Button, unable to next "+" symbol in button -->
+			<div class="row">
+				<div class="col-xs-3 col-xs-offset-1">
+					<form  action="/students/new.html">
+						<button type="submit" class="col-sm-offset-1 btn btn-lg btn-success">
+							<i class="fa fa-plus-square-o"></i> New Student
+						</button>
+					</form>
+				</div>   <!-- col -->
+
+<!--Table Body -->
+<br>
+<table class="table table-striped table-hover table-responsive schools-table">
+  <!-- Table Header -->
   <thead>
     <tr>
-      <th>Full name</th>
-      <th>Screen name</th>
-      <th>Icon</th>
-      <th>Color</th>
-      <th>Contact info</th>
-      <th>Description</th>
-      <th>Session interval</th>
-      <th>School</th>
-      <th colspan="3"></th>
+      <th></th>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Last Session</th>
     </tr>
   </thead>
-
+  
+  <!-- Table Body -->
   <tbody>
     <% @students.each do |student| %>
-      <tr>
-        <td><%= student.full_name %></td>
+    
+    <!--SOURCE for data-link: http://stackoverflow.com/questions/9945620/making-a-table-row-into-a-link-in-rails-->
+      <tr data-link = "<%= edit_student_path(student) %>">
+        <td>
+          <div class="table-sq i-<%= student.color %>">                 <!--Generate Student Color-->
+					  <i class="fa fa-<%= student.icon %> fa-2x table-icon"></i>  <!--Generate Student Icon-->
+				  </div>
+        </td>
         <td><%= student.screen_name %></td>
-        <td><%= student.icon %></td>
-        <td><%= student.color %></td>
-        <td><%= student.contact_info %></td>
-        <td><%= student.description %></td>
-        <td><%= student.session_interval %></td>
-        <td><%= student.school_id %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= student.full_name %></td>
+        <td>**Last Session***</td>                      <!-- Need to link to last Student Session -->
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Student', new_student_path %>
