--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,15 @@
-<h1>New Student</h1>
+<!--Michael Loptien-->
 
-<%= render 'form', student: @student %>
-
-<%= link_to 'Back', students_path %>
+  <!-- Page Header -->
+  <div class="page-header vertical-align">
+  	<div class="col-xs-11">
+  		<h2>New Student<small> - add a new student to school [SCHOOL NAME HERE]</small></h2>
+  		<!-- Dynamically fills in with school id -->
+  	</div>
+  	<div class="col-xs-1 center-block">
+  		<div class="header-sq i-ltblue" title="Turning Pointe Autism Foundation">
+  			<span class="fa fa-home fa-3x teacher-icon"></span>
+  		</div>
+  	</div>
+  </div>
+  <%= render 'form', student: @student, isNew: true %>
