Content col fixes

--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -1,4 +1,6 @@
 	<!-- page header -->
+	<!--- Note from Carolyn C: all pages that are not logged (excluding the login screen) need this content col!-->
+	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 		<div class="page-header vertical-align">
 			<div class="col-xs-11">
 				<h2>About<small> - information, authors and acknowledgements</small></h2><!-- Dynamically fills in with school id -->
@@ -31,6 +33,7 @@
 			<!-- bottom padding for demo only -->
 			<p style="padding-bottom: 100px;"></p>
 		</div>   <!-- row -->
+	</div> <!--content col-->
 		
 
 
