--- a/app/views/static_pages/about2.html.erb
+++ b/app/views/static_pages/about2.html.erb
@@ -1,5 +1,6 @@
+<!--- Note from Carolyn C: all pages that are not logged (excluding the login screen) need this content col!-->
+	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 		<div class="page-header vertical-align">
-			
 			<div class="col-xs-11">
 				<h2>About student art<small> - artwork contributed to Dinner Out</small></h2><!-- Dynamically fills in with school id -->
 				<% if logged_out? %>
@@ -25,3 +26,5 @@
 			<!-- bottom padding for demo only -->
 			<p style="padding-bottom: 100px;"></p>
 		</div>   <!-- row -->
+	</div>
+</div>
