--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
 </nav>
 
 <div class="container">
+	<!--Note from Carolyn C: If you are working on a page that you see when NOT logged in (excluding the login page), make sure to manually add the content the content col below -->
 	<% if logged_in? %>
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 		<%= yield %>
