student index and new have dynamic headers and filtering for super user

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,9 +1,9 @@
-<!--Michael Loptien-->
+<!--Ricky Perez & Michael Loptien-->
 
 <!-- Page Header -->
 <div class="page-header vertical-align">
   
-   <!-- Dynamically fills in with school full name -->
+  <!-- Dynamically fills in with school full name -->
 	<div class="col-xs-11">
 	  <h2>All Students<small> - manage students at school <%= @school.full_name %></small></h2>
 	</div>
