--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -3,10 +3,11 @@
 	<!-- page header -->
 		<div class="page-header vertical-align">
 			<div class="col-xs-11">
+				<!-- Dynamically fills in with school full name -->
 				<h2>Student Profile <small>- view/edit information for student <%= @student.full_name %></small></h2>
 			</div>
 			<div class="col-xs-1 center-block">
-				<!-- Student icon, color, & float over name -->
+				<!-- Dynamically fills in Student icon, color, & float over name -->
 				<div class="header-sq i-<%= @student.color %>" title="<%= @student.screen_name %>">
 					<span class="fa fa-<%= @student.icon %> fa-3x teacher-icon"></span>
 				</div>
