--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -5,17 +5,32 @@
 <!-- Page Header -->
 <div class="page-header vertical-align">
   
-   <!-- Dynamically fills in with school full name -->
+<!-- Dynamically fills in with school full name -->
+<!-- If logged in user is Super User then display ALL students and super users header info -->
+<% if current_teacher.school_id == 0 %>
 	<div class="col-xs-11">
-	  <h2>All Students<small> - manage students at school <%= @school.full_name %></small></h2>
+	    <h2>All Students<small> - manage students as super user <%= current_teacher.full_name%></small></h2>
 	</div>
-	
+		<!-- Dynamically fills in with school color, icon, and title of school -->
+	<div class="col-xs-1 center-block">
+		<div class="header-sq i-<%= current_teacher.color %>" title="<%= current_teacher.full_name%>">
+					<span class="fa fa-<%= current_teacher.icon %> fa-3x teacher-icon"></span>
+		</div>
+	</div>
+<% else %><!-- need an IF for Kreiger since he has no school -->
+  <div class="col-xs-11">
+	    <h2>All Students<small> - manage students at school <%= @school.full_name %></small></h2>
+	</div>
 	<!-- Dynamically fills in with school color, icon, and title of school -->
 	<div class="col-xs-1 center-block">
 		<div class="header-sq i-<%= @school.color %>" title="<%= @school.full_name%>">
 					<span class="fa fa-<%= @school.icon %> fa-3x teacher-icon"></span>
 		</div>
 	</div>
+<% end %>
+
+	
+
 </div>
 <!--End page header-->
 
